test-data/error/too-high-version.hltas
version 999
frames
----------|------|------|0.001|-|-|1
